--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-3d-viewer": "^1.0.12",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "three": "^0.129.0",
